complete test on downolad report

--- a/templates/downloadreport.html
+++ b/templates/downloadreport.html
@@ -25,7 +25,7 @@
 						{% endif %}
 						{% endfor %}			
 					</ul>
-					<!-------------contents for tabs----------{% if forloop.counter == 1 %}{% endif %}-->
+					<!-------------contents for tabs---------->
 
 
 					<div class="tab-content" style="text-align: left">
@@ -33,7 +33,7 @@
 						{% for receiver in receiverList %}
 						{% if forloop.counter == 1 %}
 						
-						<div class="tab-pane active" id="{{receiver.id}}">
+						<div class="tab-pane active " id="{{receiver.id}}">
 							<ul class="nav nav-tabs nav-stacked">
 								<p>
 									<a href="mailto:{{receiver.e_mail}}" style="color: #4D4D4D;"><i class = " icon-envelope"> </i>{{receiver.e_mail}}</a><br>
@@ -41,18 +41,20 @@
 										Location ot Address : {{receiver.location_or_address}}							
 								</p>
 								<hr>
-									
+								<p style = "text-align:center;"><b><u>List Of Reports</u></b></p>	
 						<!--- details in the tabs {{.file.url}}---->
 								{% for report in  reportList%}						
 								{% if report.name_of_receiver == receiver %}
-								{{receiver}}-->{{report}}--><br>
+								<p style = "text-align:cjustify;">
+									<b><u>Title Of Report  </u> : {{report.report_title}}</b><br>
+									<br><b><u>Discription Of Report </u></b>: {{report.description_of_report}}</p>								
 								{% for file in fileList %}
-								{% if file.report_title == report %}
-								file:{{file}}-->{{receiver}}<br>
-								<li style="padding: 3px"><a href=""><b><i class="icon-file icon-white"></i>file name</b>
+								{% if file.report_title == report %}								
+								<li style="padding: 3px"><a href="{{file.report_file.url}}"><b><i class="icon-file icon-white"> </i>{{file}}</b>
 								<i class="icon-download-alt pull-right"></i></a></li>	
 								{% endif %}
-								{% endfor %}		
+								{% endfor %}
+								<hr>			
 								{% endif %}						
 								{% endfor %}
 												
@@ -67,17 +69,21 @@
 										Location ot Address : {{receiver.location_or_address}}							
 								</p>
 								<hr>
+								<p style = "text-align:center;"><b><u>List Of Reports</u></b></p>
 						<!--- details in the tabs {{.file.url}}---->
 								{% for report in  reportList%}								
 								{% if report.name_of_receiver == receiver %}
-								{{receiver}}-->{{report}}--><br>
+								
+								<p style = "text-align:cjustify;">
+									<b><u>Title  </u> : {{report.report_title}}</b><br>
+									<br><u>Discription  </u>  </b>{{report.description_of_report}}</p>
 								{% for file in fileList %}
 								{% if file.report_title == report %}
-								file:{{file}}-->{{receiver}}<br>
-								<li style="padding: 3px"><a href=""><b><i class="icon-file icon-white"></i>file name</b>
-								<i class="icon-download-alt pull-right"></i></a></li>	
+								<li style="padding: 3px"><a href="{{file.report_file.url}}"><b><i class="icon-file icon-white"> </i>{{file}}</b>
+								<i class="icon-download-alt pull-right"></i></a></li>
 								{% endif %}
-								{% endfor %}		
+								{% endfor %}
+								<hr>		
 								{% endif %}						
 								{% endfor %}					
 							</ul>				
