--- a/templates/base2.html
+++ b/templates/base2.html
@@ -48,7 +48,7 @@
 <!---------------- footer ---------------------->
 <div id='footer'>
 	
-	<p>This site developed by <b>Mr. Joseph Chingalo</b>,<br> Computer science student at University of Dar es salaam<br>
+	<p>This site developed by <b>Mr. Joseph Chingalo</b>,<br> Computer science student at the University of Dar es salaam<br>
 	&copy; {% now " Y" %}<br> all right reserved</p>
 		
 	<hr>	
