complete downloading functionalities for reference and download

--- a/templates/downloadreference.html
+++ b/templates/downloadreference.html
@@ -9,13 +9,7 @@
 <!---------------contents for download reference------------------>
 {% block page_contents %}
 <div class = "row-fluid">
-	<div class = "well">
-		{% for reference in referenceList %}{% if reference.reference_category == "Others" %}
-		{{reference.reference_category}}<br>
-		{% for file in fileList %}
-		{% if file.reference_title == reference %}{{file}}{% endif %}
-		{% endfor %}	
-		{% endif %}<br>{% endfor %}
+	<div class = "well">		
 		<div class="tabbable">
 			<!---------- tabs----------->
 			<ul class ="nav nav-tabs">
@@ -32,37 +26,44 @@
 				<div class="tab-pane active" id="tab1">
 					<ul class="nav nav-tabs nav-stacked">
 						{% for reference in referenceList %}{% if reference.reference_category == "Economy" %}
-						{{reference.reference_category}}<br>
+						<p>
+							<b><u>Title Of Reference  </u> : {{reference.reference_title}}</b><br>	
+							<b><u>Discription Of Reference </u></b>: {{reference.reference_title_discription}}					
+						</p>	
 						{% for file in fileList %}
-						{% if file.reference_title == reference %}{{file}}{% endif %}
-						{% endfor %}	
-						{% endif %}<br>{% endfor %}
-						<li style="padding: 3px">
-						
-						{{file}}	 
-							<a href="">details<br><b><i class="icon-file icon-white"></i>file name</b>
+						{% if file.reference_title == reference %}
+						<li style="padding: 3px"> 							
+							<a href="{{file.reference_file.url}}"><br><b><i class="icon-file icon-white"></i> {{file}}</b>
 							<i class="icon-download-alt pull-right"></i></a>
+						</li>
+						{% endif %}
+						{% endfor %}	
+						{% endif %}
+						{% endfor %}
 						
 						</li>
 					</ul>
 				</div>
-										
-			
-			
+
 			
 				<div class="tab-pane" id="tab2">
 					<ul class="nav nav-tabs nav-stacked">
-						<!--- details in the tabs {{.file.url}}-->
-						{% for reference in referenceList %}{% if reference.reference_category == "Institution" %}
-						{{reference.reference_category}}<br>
+						{% for reference in referenceList %}
+						{% if reference.reference_category == "Institution" %}
+						<p>
+							<b><u>Title Of Reference  </u> : {{reference.reference_title}}</b><br>	
+							<b><u>Discription Of Reference </u></b>: {{reference.reference_title_discription}}					
+						</p>	
 						{% for file in fileList %}
-						{% if file.reference_title == reference %}{{file}}{% endif %}
-						{% endfor %}	
-						{% endif %}<br>{% endfor %}
-						<li style="padding: 3px"> 
-							<a href="">details<br><b><i class="icon-file icon-white"></i>file name</b>
+						{% if file.reference_title == reference %}
+						<li style="padding: 3px"> 							
+							<a href="{{file.reference_file.url}}"><br><b><i class="icon-file icon-white"></i> {{file}}</b>
 							<i class="icon-download-alt pull-right"></i></a>
-						</li>											
+						</li>
+						{% endif %}
+						{% endfor %}	
+						{% endif %}
+						{% endfor %}											
 					</ul>
 				</div>			
 	
@@ -71,31 +72,44 @@
 				<div class="tab-pane" id="tab3">
 					<ul class="nav nav-tabs nav-stacked">
 						{% for reference in referenceList %}{% if reference.reference_category == "Social" %}
-						{{reference.reference_category}}<br>
+						<p>
+							<b><u>Title Of Reference  </u> : {{reference.reference_title}}</b><br>	
+							<b><u>Discription Of Reference </u></b>: {{reference.reference_title_discription}}					
+						</p>	
 						{% for file in fileList %}
-						{% if file.reference_title == reference %}{{file}}{% endif %}
-						{% endfor %}	
-						{% endif %}<br>{% endfor %}
-						<li style="padding: 3px"> 
-							<a href="">details<br><b><i class="icon-file icon-white"></i>file name</b>
+						{% if file.reference_title == reference %}
+						<li style="padding: 3px"> 							
+							<a href="{{file.reference_file.url}}"><br><b><i class="icon-file icon-white"></i> {{file}}</b>
 							<i class="icon-download-alt pull-right"></i></a>
-						</li>												
+						</li>
+						{% endif %}
+						{% endfor %}	
+						{% endif %}
+						{% endfor %}
+																	
 					</ul>
 				</div>										
 			
 
 				<div class="tab-pane" id="tab4">
 					<ul class="nav nav-tabs nav-stacked">
-						{% for reference in referenceList %}{% if reference.reference_category == "Others" %}
-						{{reference.reference_category}}<br>
+						{% for reference in referenceList %}
+						{% if reference.reference_category == "Others" %}
+						<p>
+							<b><u>Title Of Reference  </u> : {{reference.reference_title}}</b><br>	
+							<b><u>Discription Of Reference </u></b>: {{reference.reference_title_discription}}					
+						</p>						
+						
 						{% for file in fileList %}
-						{% if file.reference_title == reference %}{{file}}{% endif %}
-						{% endfor %}	
-						{% endif %}<br>{% endfor %}
-						<li style="padding: 3px"> 
-							<a href="">details<br><b><i class="icon-file icon-white"></i>file name</b>
+						{% if file.reference_title == reference %}
+						<li style="padding: 3px"> 							
+							<a href="{{file.reference_file.url}}"><br><b><i class="icon-file icon-white"></i> {{file}}</b>
 							<i class="icon-download-alt pull-right"></i></a>
-						</li>									
+						</li>
+						{% endif %}
+						{% endfor %}	
+						{% endif %}
+						{% endfor %}									
 					</ul>
 				</div>						
 
