--- a/templates/searchreport.html
+++ b/templates/searchreport.html
@@ -56,7 +56,7 @@
 		{% else %}
 		<p> 
 			<i>
-				There is no file whose  name of report's title cobtains <strong>'{{searchedReportTitle}}'</strong>, please click buttom below to search again
+				There is no file whose  name of report's title contains <strong>'{{searchedReportTitle}}'</strong>, please click buttom below to search again
 			</i>
 		</p>
 		<div style="Text-align:center;">
@@ -98,7 +98,7 @@
 		{% else %}
 		<p> 
 			<i>
-				There is no file whose  name of report's reciver cobtains <strong>'{{searchedReceiver}}'</strong>, please click buttom below to search again 
+				There is no file whose  name of report's reciver contains <strong>'{{searchedReceiver}}'</strong>, please click buttom below to search again 
 			</i>
 		</p>
 		<div style="Text-align:center;">
